--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   path_provider: ^2.1.1
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.3
+  conditional_builder_null_safety: ^0.0.6
+  encrypt: ^5.0.3
 
 dev_dependencies:
   flutter_test:
